@@ -2,6 +2,7 @@
 
 export(cloudMask)
 export(estimateSHV)
+export(ggRGB)
 export(radCor)
 export(readMeta)
 export(readSLI)
@@ -11,6 +12,7 @@ export(superClass)
 export(writeSLI)
 import(XML)
 import(geosphere)
+import(ggplot2)
 import(landsat)
 import(plyr)
 import(randomForest)
